# editor

./: README-zh_hans.md  README.md  crowdin.yml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.tauri.ts  vite.config.ts  vite.config.web.ts
.github/workflows/: i18n.yml
patches/: react-split-pane.patch
public/locales/: README.md
public/locales/en-US/: translation.json
public/locales/ja-JP/: translation.json
public/locales/zh-CN/: translation.json
public/skin/: skin-bundle.json
src/: global.d.ts  i18n.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/App/: App.ts  Hotkeys.ts
src/Assets/: Assets.ts
src/Audio/: Audio.ts  Channel.ts  Clip.ts  Clock.ts
src/Chart/: BPM.ts  BPMList.ts  Chart.ts  Judgeline.ts  JudgelineProps.ts  Keyframe.ts  Note.ts  Tick.ts  types.ts
src/Chart/History/: History.ts  types.ts
src/Core/: index.ts
src/Database/: Database.ts  Engine.ts  types.ts
src/Settings/: Settings.ts  types.tsx
src/Storage/: File.ts  Storage.ts  types.ts
src/_Audio/: Clock.ts
src/audio/: channel.ts  clock.ts  index.ts
src/ui/: App.tsx  index.css  index.tsx  ui.d.ts
src/ui/BPMPanel/: Item.tsx  List.tsx  styles.css
src/ui/Bar/: AppBar.tsx  styles.css
src/ui/DockPanel/: DockPanel.tsx
src/ui/EditPanel/: Boolean.tsx  Dropdown.tsx  EditPanel.tsx  Input.tsx  ItemContainer.tsx  List.tsx  Number.tsx  Slider.tsx  String.tsx  builder.ts  styles.css
src/ui/store/: store.ts
src/utils/: chart.ts  class.ts  easings.ts  file.ts  math.ts  renderer.ts  tempo.ts  types.ts  ui.ts
(+125 files in other folders)
